@@ -36,6 +36,12 @@
      call channel destroy callbacks on receipt of open failure messages.
      fixes client hangs when connecting to a server that has MaxSessions=0
      set spotted by imorgan AT nas.nasa.gov; ok markus@
+   - djm@cvs.openbsd.org 2009/01/01 21:17:36
+     [kexgexs.c]
+     fix hash calculation for KEXGEX: hash over the original client-supplied
+     values and not the sanity checked versions that we acutally use;
+     bz#1540 reported by john.smith AT arrows.demon.co.uk
+     ok markus@
 
 20090107
  - (djm) [uidswap.c] bz#1412: Support >16 supplemental groups in OS X.
@@ -5045,5 +5051,5 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5169 2009/01/28 05:22:34 djm Exp $
+$Id: ChangeLog,v 1.5170 2009/01/28 05:23:06 djm Exp $
 
